--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://rahulprakashy.github.io/VeridianWeb",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@fontsource/dm-sans": "^5.1.0",
     "@fontsource/ibm-plex-serif": "^5.1.0",
     "@fontsource/poppins": "^5.1.0",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
     "@mui/styled-engine-sc": "^6.1.8",
+    "gh-pages": "^6.2.0",
     "imer": "^0.0.1",
     "immer": "^10.1.1",
     "react": "^18.3.1",
